--- a/RealEstateProjectSale/appsettings.json
+++ b/RealEstateProjectSale/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DB": "Server=(local);Database=RealEstateProjectSaleSystemDB; TrustServerCertificate=true; Uid=sa; Pwd=12345"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
