--- a/RealEstateProjectSaleRepository/RealEstateProjectSaleRepository.csproj
+++ b/RealEstateProjectSaleRepository/RealEstateProjectSaleRepository.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\RealEstateProjectSaleDAO\RealEstateProjectSaleDAO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="IRepository\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
