commit create folder

--- a/RealEstateProjectSaleDAO/RealEstateProjectSaleDAO.csproj
+++ b/RealEstateProjectSaleDAO/RealEstateProjectSaleDAO.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\RealEstateProjectSaleBusinessObject\RealEstateProjectSaleBusinessObject.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DAOs\" />
+  </ItemGroup>
+
 </Project>
