--- a/RealEstateProjectSaleBusinessObject/RealEstateProjectSaleBusinessObject.csproj
+++ b/RealEstateProjectSaleBusinessObject/RealEstateProjectSaleBusinessObject.csproj
@@ -21,5 +21,8 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="DTO\Update\" />
+	</ItemGroup>
 
 </Project>
