--- a/.github/workflows/main_realestateprojectsale.yml
+++ b/.github/workflows/main_realestateprojectsale.yml
@@ -40,21 +40,12 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
-      
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B9A10E2D148645BF86903BE69CCFCB88 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3AECCE0E768640DD9E84ED01E49DC5B0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_0E10EEB6041043D2B036F96BB92FD5E8 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -62,5 +53,5 @@ jobs:
         with:
           app-name: 'realestateprojectsale'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8F13A961B24E4388A59D1B9011893A34 }}
           package: .
-          
