--- a/.github/workflows/main_realestateprojectsalesystem.yml
+++ b/.github/workflows/main_realestateprojectsalesystem.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - realestateprojectsalesystem
+name: Build and deploy ASP.Net Core app to Azure Web App - RealEstateProjectSaleSystem
 
 on:
   push:
@@ -40,27 +40,18 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
-      
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_04E909BB7AB148908AA3A4D6E3E926E9 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C030189B6E7343F2A6E4C11279646A3F }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1DBE3523AA364D9A9E683CDEE63A1820 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'realestateprojectsalesystem'
+          app-name: 'RealEstateProjectSaleSystem'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_421B7BFACE184623AD8ABA58DB4D0CF6 }}
           package: .
-          
