Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_realestateprojectsale.yml
+++ b/.github/workflows/main_realestateprojectsale.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - realestateprojectsale
+name: Build and deploy ASP.Net Core app to Azure Web App - RealEstateProjectSale
 
 on:
   push:
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'realestateprojectsale'
+          app-name: 'RealEstateProjectSale'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8F13A961B24E4388A59D1B9011893A34 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0BA92871F2614ED58F7163FFC471CD5C }}
           package: .
