Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_realestateprojectsale.yml
+++ b/.github/workflows/main_realestateprojectsale.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - RealEstateProjectSale
+name: Build and deploy ASP.Net Core app to Azure Web App - realestateprojectsale
 
 on:
   push:
@@ -40,18 +40,27 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
+      
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2A174438AB3D46A4A5F16D3E880E3F9E }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6271CD347FFD40F99C01A560C55E2D58 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6BA4240644724628A0EC2D1C7245481B }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'RealEstateProjectSale'
+          app-name: 'realestateprojectsale'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0BA92871F2614ED58F7163FFC471CD5C }}
           package: .
+          
