--- a/RealEstateProjectSale/appsettings.json
+++ b/RealEstateProjectSale/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DB": "Server=(local);Database=RealEstateProjectSaleSystemDB; TrustServerCertificate=true; Uid=sa; Pwd=12345"
+    "DB": "Server=tcp:realestateprojectsalesystem.database.windows.net,1433;Initial Catalog=RealEstateProjectSaleSystem;Persist Security Info=False;User ID=realestatedb;Password=Abcd@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
