--- a/.github/workflows/main_realestateprojectsalesystem.yml
+++ b/.github/workflows/main_realestateprojectsalesystem.yml
@@ -40,12 +40,21 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
+      
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FD70AA1648F246EDAC0369D6718B0966 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_01F1AC5C7C2C4535BD7BE88BE35F2795 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_04BF1958411D426487AA246DBF231BA5 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -53,5 +62,5 @@ jobs:
         with:
           app-name: 'realestateprojectsalesystem'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0EF0F6613E3C47FEB9C27170DBC1AB63 }}
           package: .
+          
